# mur

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  building.md  contributing.md  getting_started.md
include/mur/context/: context.hpp
source/: main.cpp
source/context/: context.cpp
test/: main.cpp
test/context/: context_test.hpp
